--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     >
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
       <a 
         class="more-inf" 
