--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       charset="utf-8"
     >
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="heder-img" src="./eisenhower-matrix.jpg">
       <a 
         class="more-info" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -25,42 +25,42 @@
     </div>
     <div class="main">
       <p id="add-item-wrapper">
-        <label for="new-task">Add Item</label>
+        <label class="label-new-task" for="new-task">Add Item</label>
         <div class="add-item">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="task new-task" type="text">
+          <button class="button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-heading">Todo</h3>
+      <ul id="incomplete-tasks" class="tasks">
+        <li class="task-item">
+          <input class="checkbox" type="checkbox">
+          <label class="task element-content">Pay Bills</label>
+          <input type="text" class="task task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class="delete-pic" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="task-item edit-mode">
+          <input class="checkbox" type="checkbox">
+          <label class="task element-content">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-input">
+          <button class="button edit">Save</button>
+          <button class="button delete">
+            <img class="delete-pic" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-heading">Completed</h3>
+      <ul id="completed-tasks" class="tasks completed-tasks">
+        <li class="task-item">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="task element-content">See the Doctor</label>
+          <input type="text" class="task task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class="delete-pic" src="./remove.svg">
           </button>
         </li>
       </ul>
