refactor(extended-1.2): add alt attribute to img tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="heder-img" src="./eisenhower-matrix.jpg">
+      <img class="heder-img" src="./eisenhower-matrix.jpg" alt="header picture">
       <a 
         class="more-info" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -42,7 +42,7 @@
             <input type="text" class="task task-input">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="delete-pic" src="./remove.svg">
+              <img class="delete-pic" src="./remove.svg" alt="image delete">
             </button>
           </li>
           <li class="task-item edit-mode">
@@ -51,7 +51,7 @@
             <input type="text" value="Go Shopping" class="task task-input">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="delete-pic" src="./remove.svg">
+              <img class="delete-pic" src="./remove.svg" alt="image delete">
             </button>
           </li>
         </ul>
@@ -65,7 +65,7 @@
             <input type="text" class="task task-input">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="delete-pic" src="./remove.svg">
+              <img class="delete-pic" src="./remove.svg" alt="image delete">
             </button>
           </li>
         </ul>
