style(no-rule): add styles to match the original layout

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <img class="todo__delete-pic" src="./remove.svg" alt="image delete">
             </button>
           </li>
-          <li class="todo__item todo__task-item_edit-mode">
+          <li class="todo__item todo__item_edit-mode">
             <input class="todo__checkbox" type="checkbox">
             <label class="todo__task todo__task_element-content">Go Shopping</label>
             <input class="todo__task todo__task_input" type="text" value="Go Shopping">
