style(basic-1.3): replace single quotes with double quotes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <label for="new-task">Add Item</label>
         </h2>
         <div class="add-item">
-          <input id='new-task' class="todo__task todo__task_new-task" type="text">
+          <input id="new-task" class="todo__task todo__task_new-task" type="text">
           <button class="todo__button">Add</button>
         </div>
       </section>
